more Capitalization and White space totalitarianism.

--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -5,11 +5,8 @@
 
 \textbf{Author:} Wololoeren
 
-\textit{The war had dragged on far too long. Armies were shattered, lands burned, and hope had thinned to a whisper. At last, the rival lords agreed to set aside their grievances and forge an Accord — a fragile peace born of desperation.\\
-	Messengers rode beneath white banners, oaths were sworn, and for the first time in years, the clash of steel gave way to uneasy silence. Yet peace has its own enemies.\\
-	As the allied hosts gathered in the valley of Laren’s Cross, dawn broke with the sound of horns — not of welcome, but of war.\\
-	Out of the mist, unseen armies struck with deadly precision. Someone had betrayed the Accord.\\
-	Now, surrounded and outnumbered, the fate of your alliance lies in your hands. Stand together… or fall alone.}  % no-check-caps
+\textit{The war had dragged on far too long. Armies were shattered, lands burned, and hope had thinned to a whisper. At last, the rival lords agreed to set aside their grievances and forge an Accord — a fragile peace born of desperation.\\Messengers rode beneath white banners, oaths were sworn, and for the first time in years, the clash of steel gave way to uneasy silence. Yet peace has its own enemies.\\
+As the allied hosts gathered in the valley of Laren’s Cross, dawn broke with the sound of horns — not of welcome, but of war.\\Out of the mist, unseen armies struck with deadly precision. Someone had betrayed the Accord.\\Now, surrounded and outnumbered, the fate of your alliance lies in your hands. Stand together… or fall alone.}  % no-check-caps
 \subsection*{\MakeUppercase{Scenario Length}}
 14 Rounds
 
@@ -71,7 +68,7 @@ All players must defeat the Level VII Neutral Combat.
 \end{itemize}
 \textbf{Hard:}
 \begin{itemize}
-  \item Add a initiative stack token to a random Unit of the TEFs on round 4, 8 and 10.
+  \item Add a initiative stack token to a random Unit of the TEFs on Round 4, 8 and 10.
 \end{itemize}
 \textbf{Impossible:}
 \begin{itemize}
@@ -91,9 +88,9 @@ All players must defeat the Level VII Neutral Combat.
 
 \subsubsection*{\MakeUppercase{Other Rules}}
 \begin{itemize}
-  \item  At the end of every round players must decide one player who get a free Positive morale token.
+  \item  At the end of every Round players must decide one player who get a free Positive morale token.
   \item  Players may exchange artifacts and spells from their hands and Units and resources if their main Heroes are standing on adjacent Fields or both are standing in their own town.
-  \item  Once a player defeats the level 7 center-tile Field their Heroes are removed from the board and they cannot fight TEF, and are no longer being considered for TEF eligibility.
+  \item  Once a player defeats the Level 7 center-tile Field their Heroes are removed from the board and they cannot fight TEF, and are no longer being considered for TEF eligibility.
 \end{itemize}
 \end{multicols}
 \begin{tikzpicture}[overlay]
