--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -78,7 +78,7 @@ All players must defeat the Level VII Neutral Combat.
 
 \subsubsection*{\MakeUppercase{Timed Event Fights}}
 \begin{itemize}
-  \item Collaboratively pay P×5 \svg{gold}, P×3 \svg{building_materials} and P×1 \svg{valuables} to reveal the Center Map Tile(P is number of players). e.g.: 4 Players must pay 20\svg{gold}, 12\svg{building_materials}, 4\svg{valuables}.
+  \item Collaboratively pay $P$ × 5 \svg{gold}, $P$ × 3 \svg{building_materials} and P×1 \svg{valuables} to reveal the Center Map Tile ($P$ stands for the number of players), e.g., 4 players must pay 20 \svg{gold}, 12 \svg{building_materials}, and 4 \svg{valuables}.
   \item For less than 4 players only \textbf{*One*} player need to fight the TEF. The players may decide which eligible players will fight.
   \item For 4 or more players \textbf{*Two*} players must fight a TEF each when the event occur.
   \item Players are NOT eligible to fight a TEF if they already \textbf{won} more TEF than another player or have no Units.
