--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -23,7 +23,7 @@ As the allied hosts gathered in the valley of Laren’s Cross, dawn broke with t
   \item 2 × Search (2) the \svg{bronze} Neutral Deck.
 \end{itemize}
 
-\textbf{Town Buildings:} City-Hall.
+\textbf{Town Buildings:} City Hall.
 
 \textbf{Map Tile Pool:} Each player takes 2 random Far (II-III) Map Tiles and 2 random Near (IV-V) Map Tiles.
 
