--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -32,7 +32,7 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 
 \begin{itemize}
   \item $P$ × Starting (I) Map Tiles
-  \item 1 × Center (VI–VII) Map Tile with Dragon Utopia
+  \item 1 × Center (VI–VII) Map Tile
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
@@ -59,6 +59,7 @@ All players must defeat the Level VII Neutral Combat.
 \begin{itemize}
   \item  At the end of Round 12 \textbf{*One*} player must fight a TEF of 2x\svg{azure}.
 \end{itemize}
+\clearpage
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \subsubsection*{\MakeUppercase{Difficulty Settings}}
