Changed Banner to earth magic.

--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Cooperative Scenario}{The Ambushed Accord}{\images/the_ambushed_accord_banner.png}
+\addscenariosection{1}{Cooperative Scenario}{The Ambushed Accord}{\images/earth_magic.png}
 
 \begin{multicols}{2}
 
@@ -75,7 +75,6 @@ All players must defeat the Level VII Neutral Combat.
 \begin{itemize}
   \item Add two random stack token to two Units of all TEF fights.
 \end{itemize}
-%\columnbreak
 
 \subsubsection*{\MakeUppercase{Timed Event Fights}}
 \begin{itemize}
