--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -5,7 +5,8 @@
 
 \textbf{Author:} Wololoeren
 
-\textit{The war had dragged on far too long. Armies were shattered, lands burned, and hope had thinned to a whisper. At last, the rival lords agreed to set aside their grievances and forge an Accord — a fragile peace born of desperation.\\Messengers rode beneath white banners, oaths were sworn, and for the first time in years, the clash of steel gave way to uneasy silence. Yet peace has its own enemies.\\
+\textit{The war had dragged on far too long. Armies were shattered, lands burned, and hope had dwindled to barely a whisper. At last, the rival lords agreed to set aside their grievances and forge an Accord — a fragile peace born of desperation.\\
+Messengers rode beneath white banners, oaths were sworn, and for the first time in years, the clash of steel gave way to uneasy silence. Yet peace has its own enemies.\\
 As the allied hosts gathered in the valley of Laren’s Cross, dawn broke with the sound of horns — not of welcome, but of war.\\Out of the mist, unseen armies struck with deadly precision. Someone had betrayed the Accord.\\Now, surrounded and outnumbered, the fate of your alliance lies in your hands. Stand together… or fall alone.}  % no-check-caps
 \subsection*{\MakeUppercase{Scenario Length}}
 14 Rounds
