--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -22,7 +22,7 @@ Out of the mist, enemy armies struck with deadly precision. Someone had betrayed
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × Search (2) the \svg{bronze} Neutral Deck.
+  \item 2 × Search (2) the \svg{bronze} Neutral Deck
 \end{itemize}
 
 \textbf{Town Buildings:} City Hall
