--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -47,19 +47,19 @@ Each player must win the Level VII Neutral Combat.
 \end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
-  \item At the end of Round 4 \textbf{*One*} player must fight a Timed Event Fight (TEF) of 5x\svg{bronze}.
+  \item \textbf{One} player must fight a Timed Event Fight (TEF) of 5 × \svg{bronze}.
 \end{itemize}
-\textbf{\nth{8} Round:}
+End of \textbf{\nth{8} Round:}
 \begin{itemize}
-  \item  At the end of Round 8 \textbf{*One*} player must fight a TEF of 4x\svg{silver}
+  \item \textbf{One} player must fight a TEF of 4 × \svg{silver}
 \end{itemize}
-\textbf{\nth{10} Round:}
+End of \textbf{\nth{10} Round:}
 \begin{itemize}
-  \item  At the end of Round 10 \textbf{*One*} player must fight a TEF of 3x\svg{golden}.
+  \item \textbf{One} player must fight a TEF of 3 × \svg{golden}.
 \end{itemize}
-\textbf{\nth{12} Round:}
+End of \textbf{\nth{12} Round:}
 \begin{itemize}
-  \item  At the end of Round 12 \textbf{*One*} player must fight a TEF of 2x\svg{azure}.
+  \item \textbf{One} player must fight a TEF of 2 × \svg{azure}.
 \end{itemize}
 \clearpage
 
@@ -75,13 +75,12 @@ Each player must win the Level VII Neutral Combat.
 \end{itemize}
 \textbf{Impossible:}
 \begin{itemize}
-  \item Add two random stack token to two Units of all TEF fights.
+  \item Add two random stack tokens to two Units in each TEF fights.
 \end{itemize}
-%\columnbreak
 
 \subsubsection*{\MakeUppercase{Timed Event Fights}}
 \begin{itemize}
-  \item Collaboratively pay $P$ × 5 \svg{gold}, $P$ × 3 \svg{building_materials} and P×1 \svg{valuables} to reveal the Center Map Tile ($P$ stands for the number of players), e.g., 4 players must pay 20 \svg{gold}, 12 \svg{building_materials}, and 4 \svg{valuables}.
+  \item Collaboratively pay $P$~×~5~\svg{gold}, $P$~×~3~\svg{building_materials} and $P$~×~\svg{valuables} to reveal the Center Map Tile ($P$ stands for the number of players), e.g., 4 players must pay 20~\svg{gold}, 12~\svg{building_materials}, and 4~\svg{valuables}.
   \item For less than 4 players only \textbf{*One*} player need to fight the TEF. The players may decide which eligible players will fight.
   \item For 4 or more players \textbf{*Two*} players must fight a TEF each when the event occur.
   \item Players are NOT eligible to fight a TEF if they already \textbf{won} more TEF than another player or have no Units.
