--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -81,20 +81,22 @@ End of \textbf{\nth{12} Round:}
 \subsubsection*{\MakeUppercase{Timed Event Fights}}
 \begin{itemize}
   \item Collaboratively pay $P$~×~5~\svg{gold}, $P$~×~3~\svg{building_materials} and $P$~×~\svg{valuables} to reveal the Center Map Tile ($P$ stands for the number of players), e.g., 4 players must pay 20~\svg{gold}, 12~\svg{building_materials}, and 4~\svg{valuables}.
-  \item For less than 4 players only \textbf{*One*} player need to fight the TEF. The players may decide which eligible players will fight.
-  \item For 4 or more players \textbf{*Two*} players must fight a TEF each when the event occur.
-  \item Players are NOT eligible to fight a TEF if they already \textbf{won} more TEF than another player or have no Units.
-  \item Defeating a TEF grants a permanent +1 \svg{movement} to your main Hero.
-  \item If a player is defeated in a TEF their Hero is sent back to their town with no Units, the remaining TEF Units must be defeated by another player if no player is eligible to fight they all loose the Scenario.
+  \item For games with 1--3 players, only one player needs to fight each Timed Event Fight. The players may decide which eligible player will fight.
+  \item For games with 4 or more players, \textbf{two players} must each fight a Timed Event Fight when the event occurs.
+  \item Players are not eligible to fight a Timed Event Fight if they have already won more Timed Event Fights than another player, or if they have no Units.
+  \item Defeating a Timed Event Fight grants a permanent +1 \svg{movement} to your Main Hero.
+  \item If a player is defeated in a Timed Event Fight, their Hero is sent back to their Town with no Units. The remaining Units must be defeated by another player. If no player is eligible to fight, players lose the Scenario.
 \end{itemize}
 
 \subsubsection*{\MakeUppercase{Other Rules}}
 \begin{itemize}
-  \item  At the end of every Round players must decide one player who get a free Positive morale token.
-  \item  Players may exchange artifacts and spells from their hands and Units and resources if their main Heroes are standing on adjacent Fields or both are standing in their own town.
-  \item  Once a player defeats the Level 7 center-tile Field their Heroes are removed from the board and they cannot fight TEF, and are no longer being considered for TEF eligibility.
+  \item At the end of every Round, players must decide which player gets a free \svg{morale_positive} Token.
+  \item Players may exchange Artifacts and Spells from their hands, as well as Units and Resources, if their Main Heroes are standing on adjacent Fields or if both Heroes are in their own Towns.
+  \item Once a player defeats the Level VII Center Tile Field, their Heroes are removed from the Map.
+    They are no longer eligible to fight Timed Event Fights.
 \end{itemize}
 \end{multicols}
+
 \begin{tikzpicture}[overlay]
   \centering
   \node at (3, -1) {\includegraphics[scale=0.35]{\maps/the_ambushed_accord_2p.png}};
