missing "end of"

--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -45,7 +45,7 @@ Each player must win the Level VII Neutral Combat.
 \begin{itemize}
   \item Build either Camp (\svg{building_special_tent}) or Workshop (Gears) for free.
 \end{itemize}
-\textbf{\nth{4} Round:}
+End of \textbf{\nth{4} Round:}
 \begin{itemize}
   \item \textbf{One} player must fight a Timed Event Fight (TEF) of 5 × \svg{bronze}.
 \end{itemize}
