--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -43,7 +43,7 @@ Each player must win the Level VII Neutral Combat.
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{2} Round:}
 \begin{itemize}
-  \item Build either Camp (\svg{building_special_tent}) or Workshop (Gears) for free.
+  \item Build either \svg{building_special_tent} or \svg{bulding_special_gears} for free.
 \end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
