--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -43,40 +43,59 @@ Each player must win the Level VII Neutral Combat.
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{2} Round:}
 \begin{itemize}
-  \item Build either Camp (\svg{building_special_tent}) or Workshop (Gears) for free.
+  \item Build either Camp (\svg{building_special_tent}) or Workshop (gears) for free. %(\svg{bulding_special_gears})
 \end{itemize}
 End of \textbf{\nth{4} Round:}
 \begin{itemize}
-  \item \textbf{One} player must fight a Timed Event Fight (TEF) of 5 × \svg{bronze}.
+  \item \textbf{one player} must fight a \textbf{Timed Event Fight} of 5 × \svg{bronze}.
 \end{itemize}
 End of \textbf{\nth{8} Round:}
 \begin{itemize}
-  \item \textbf{One} player must fight a TEF of 4 × \svg{silver}
+  \item \textbf{one player} must fight a \textbf{Timed Event Fight} of 4 × \svg{silver}
 \end{itemize}
 End of \textbf{\nth{10} Round:}
 \begin{itemize}
-  \item \textbf{One} player must fight a TEF of 3 × \svg{golden}.
+  \item \textbf{one player} must fight a \textbf{Timed Event Fight} of 3 × \svg{golden}.
 \end{itemize}
 End of \textbf{\nth{12} Round:}
 \begin{itemize}
-  \item \textbf{One} player must fight a TEF of 2 × \svg{azure}.
+  \item \textbf{one player} must fight a \textbf{Timed Event Fight} of 2 × \svg{azure}.
 \end{itemize}
 \clearpage
 
 \subsection*{\MakeUppercase{Additional Rules}}
-\subsubsection*{\MakeUppercase{Difficulty Settings}}
-\textbf{Easy:}
-\begin{itemize}
-  \item Remove a Unit from each Timed Event Fight.
-\end{itemize}
-\textbf{Hard:}
-\begin{itemize}
-  \item Add a initiative stack token to a random Unit of the TEFs on Round 4, 8 and 10.
-\end{itemize}
-\textbf{Impossible:}
-\begin{itemize}
-  \item Add two random stack tokens to two Units in each TEF fights.
-\end{itemize}
+%\subsubsection*{\MakeUppercase{Difficulty Settings}}
+%\textbf{Easy:}
+%\begin{itemize}
+%  \item Remove a Unit from each Timed Event Fight.
+%\end{itemize}
+%\textbf{Hard:}
+%\begin{itemize}
+%  \item Add a initiative stack token to a random Unit of the TEFs on Round 4, 8 and 10.
+%\end{itemize}
+%\textbf{Impossible:}
+%\begin{itemize}
+%  \item Add two random stack tokens to two Units in each TEF fights.
+%\end{itemize}
+\hommtablemulticol[]{21}{
+	\centering
+	\medskip
+	\textbf{Difficutly Settings}\\
+	\bigskip
+	
+	\begin{tabularx}{0.93\linewidth}{p{0.28\linewidth}X}
+		\darkcell[1.6]{Difficulty} & \darkcell[1.6]{Changes to Timed Event Fights} \\
+		\darkcell[1.6]{Easy}
+		& \lightcell[1.6]{Remove a random unit from each fight.} \\
+		%\darkcell[1]{Normal}
+		%& \lightcell[1]{No changes.} \\
+		\darkcell[2.2]{Hard}
+		& \lightcell[2.2]{Add an Initiative Stack Token to a random unit of the fights on Rounds 4, 8 and 10.} \\
+		\darkcell[1.8]{Impossible}
+		& \lightcell[1.8]{Add two random Stack Token to two units of all fights.} \\
+	\end{tabularx}
+	\medskip
+}
 
 \subsubsection*{\MakeUppercase{Timed Event Fights}}
 \begin{itemize}
@@ -99,14 +118,14 @@ End of \textbf{\nth{12} Round:}
 
 \begin{tikzpicture}[overlay]
   \centering
-  \node at (3, -1) {\includegraphics[scale=0.35]{\maps/the_ambushed_accord_2p.png}};
-  %\node at (3, -4) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
-  \node at (3, -7) {\includegraphics[scale=0.35]{\maps/the_ambushed_accord_3p.png}};
-  %\node at (3, -10.5) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
-  \node at (8, -3) {\includegraphics[scale=0.35]{\maps/the_ambushed_accord_4p.png}};
-  %\node at (8, -7) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
-  \node at (14, -1.8) {\includegraphics[scale=0.35]{\maps/the_ambushed_accord_5p.png}};
-  %\node at (10.5, 0.5) {\footnotesize{\textbf{\MakeUppercase{5-PLAYER SCENARIO}}}};
-  \node at (14.5, -7.5) {\includegraphics[scale=0.35]{\maps/the_ambushed_accord_6p.png}};
-  %\node at (10.7, -10.2) {\footnotesize{\textbf{\MakeUppercase{6-PLAYER SCENARIO}}}};
+  \node at (2, -1) {\includegraphics[scale=0.35]{\maps/the_ambushed_accord_2p.png}};
+  \node at (2, -4) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
+  \node at (2, -7) {\includegraphics[scale=0.35]{\maps/the_ambushed_accord_3p.png}};
+  \node at (2, -10.3) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
+  \node at (6.5, -2) {\includegraphics[scale=0.35]{\maps/the_ambushed_accord_4p.png}};
+  \node at (10, 0) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
+  \node at (10, -7) {\includegraphics[scale=0.35]{\maps/the_ambushed_accord_5p.png}};
+  \node at (12.5, -9.8) {\footnotesize{\textbf{\MakeUppercase{5-PLAYER SCENARIO}}}};
+  \node at (15, -2.0) {\includegraphics[scale=0.35]{\maps/the_ambushed_accord_6p.png}};
+  \node at (16.5, -6) {\footnotesize{\textbf{\MakeUppercase{6-PLAYER SCENARIO}}}};
 \end{tikzpicture}
