Pleasing the almighty auto review overlord.

--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -65,21 +65,20 @@ End of \textbf{\nth{12} Round:}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \hommtablemulticol[]{21}{
-	\centering
-	\medskip
-	\textbf{Difficutly Settings}\\
-	\bigskip
-	
-	\begin{tabularx}{0.93\linewidth}{p{0.28\linewidth}X}
-		\darkcell[1.6]{Difficulty} & \darkcell[1.6]{Changes to Timed Event Fights} \\
-		\darkcell[1.6]{Easy}
-		& \lightcell[1.6]{Remove a random unit from each fight.} \\
-		\darkcell[2.2]{Hard}
-		& \lightcell[2.2]{Add an Initiative Stack Token to a random unit of the fights on Rounds 4, 8 and 10.} \\
-		\darkcell[1.8]{Impossible}
-		& \lightcell[1.8]{Add two random Stack Token to two units of all fights.} \\
-	\end{tabularx}
-	\medskip
+  \centering
+  \medskip
+  \textbf{Difficutly Settings}\\
+  \bigskip
+  \begin{tabularx}{0.93\linewidth}{p{0.28\linewidth}X}
+    \darkcell[1.6]{Difficulty} & \darkcell[1.6]{Changes to Timed Event Fights} \\
+    \darkcell[1.6]{Easy}
+    & \lightcell[1.6]{Remove a Unit from each fight.} \\
+    \darkcell[2.2]{Hard}
+    & \lightcell[2.2]{Add an Initiative Stack Token to a random Unit of the fights on Rounds 4, 8 and 10.} \\
+    \darkcell[1.8]{Impossible}
+    & \lightcell[1.8]{Add two random Stack Token to two Units of all fights.} \\
+  \end{tabularx}
+  \medskip
 }
 
 \subsubsection*{\MakeUppercase{Timed Event Fights}}
