--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -76,7 +76,7 @@ End of \textbf{\nth{12} Round:}
     \darkcell[2.2]{Hard}
     & \lightcell[2.2]{Add an Initiative Stack Token to a random Unit of the fights on Rounds 4, 8 and 10.} \\
     \darkcell[1.8]{Impossible}
-    & \lightcell[1.8]{Add two random Stack Token to two Units of all fights.} \\
+    & \lightcell[1.8]{Add two random Stack Tokens to two Units in all fights.} \\
   \end{tabularx}
   \medskip
 }
