--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -22,7 +22,7 @@ Out of the mist, enemy armies struck with deadly precision. Someone had betrayed
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × Search (2) the \svg{bronze} Neutral Deck
+  \item 2 × Search (2) the \svg{bronze} Neutral Deck and 1 x \svg{morale_positive} 
 \end{itemize}
 
 \textbf{Town Buildings:} City Hall
@@ -49,22 +49,26 @@ End of \textbf{\nth{4} Round:}
 \begin{itemize}
   \item \textbf{one player} must fight a \textbf{Timed Event Fight} of 5 × \svg{bronze}.
 \end{itemize}
-End of \textbf{\nth{8} Round:}
+End of \textbf{\nth{7} Round:}
 \begin{itemize}
   \item \textbf{one player} must fight a \textbf{Timed Event Fight} of 4 × \svg{silver}
 \end{itemize}
-End of \textbf{\nth{10} Round:}
+End of \textbf{\nth{9} Round:}
 \begin{itemize}
   \item \textbf{one player} must fight a \textbf{Timed Event Fight} of 3 × \svg{golden}.
 \end{itemize}
-End of \textbf{\nth{12} Round:}
+End of \textbf{\nth{11} Round:}
 \begin{itemize}
   \item \textbf{one player} must fight a \textbf{Timed Event Fight} of 2 × \svg{azure}.
+\end{itemize}
+End of \textbf{\nth{13} Round:}
+\begin{itemize}
+	\item \textbf{one player} must fight a \textbf{Timed Event Fight} of 3 × \svg{azure}.
 \end{itemize}
 \clearpage
 
 \subsection*{\MakeUppercase{Additional Rules}}
-\hommtablemulticol[]{21}{
+\hommtablemulticol[]{22}{
   \centering
   \medskip
   \textbf{Difficutly Settings}\\
@@ -73,6 +77,8 @@ End of \textbf{\nth{12} Round:}
     \darkcell[1.6]{Difficulty} & \darkcell[1.6]{Changes to Timed Event Fights} \\
     \darkcell[1.6]{Easy}
     & \lightcell[1.6]{Remove a Unit from each fight.} \\
+    \darkcell[1.6]{Normal}
+    & \lightcell[1.6]{No Change} \\
     \darkcell[2.2]{Hard}
     & \lightcell[2.2]{Add an Initiative Stack Token to a random Unit of the fights on Rounds 4, 8 and 10.} \\
     \darkcell[1.8]{Impossible}
@@ -87,13 +93,13 @@ End of \textbf{\nth{12} Round:}
   \item For games with 1--3 players, only one player needs to fight each Timed Event Fight. The players may decide which eligible player will fight.
   \item For games with 4 or more players, \textbf{two players} must each fight a Timed Event Fight when the event occurs.
   \item Players are not eligible to fight a Timed Event Fight if they have already won more Timed Event Fights than another player, or if they have no Units.
-  \item Defeating a Timed Event Fight grants a permanent +1 \svg{movement} to your Main Hero.
+  \item Defeating a Timed Event Fight grants a free \svg{morale_positive}.
   \item If a player is defeated in a Timed Event Fight, their Hero is sent back to their Town with no Units. The remaining Units must be defeated by another player. If no player is eligible to fight, players lose the Scenario.
 \end{itemize}
 
 \subsubsection*{\MakeUppercase{Other Rules}}
 \begin{itemize}
-  \item At the end of every Round, players must decide which player gets a free \svg{morale_positive} Token.
+  \item At the end of every Astrologers Round, players must decide which player gets a free \svg{morale_positive} Token.
   \item Players may exchange Artifacts and Spells from their hands, as well as Units and Resources, if their Main Heroes are standing on adjacent Fields or if both Heroes are in their own Towns.
   \item Once a player defeats the Level VII Center Tile Field, their Heroes are removed from the Map.
     They are no longer eligible to fight Timed Event Fights.
@@ -103,4 +109,11 @@ End of \textbf{\nth{12} Round:}
 \begin{tikzpicture}[overlay]
   \centering
   \node at (9, -3) {\includegraphics[scale=0.35]{\maps/the_ambushed_accord_px.png}};
+  \color{white}
+  \node at (10.6, -4) {\footnotesize{\textbf{\MakeUppercase{P1}}}};
+  \node at (11, -2) {\footnotesize{\textbf{\MakeUppercase{P2}}}};
+  \node at (9.4, -0.6) {\footnotesize{\textbf{\MakeUppercase{P3}}}};
+  \node at (7.4, -1.3) {\footnotesize{\textbf{\MakeUppercase{P4}}}};
+  \node at (7, -3.3) {\footnotesize{\textbf{\MakeUppercase{P5}}}};
+  \node at (8.6, -4.7) {\footnotesize{\textbf{\MakeUppercase{P6}}}};
 \end{tikzpicture}
