--- a/translations/castle_greek_gift.tex/fr.po
+++ b/translations/castle_greek_gift.tex/fr.po
@@ -18,16 +18,23 @@ msgstr ""
 "X-Generator: Poedit 3.8\n"
 
 #. type: multicols
-#: coops/sentinels.tex:5 coops/titans_stronghold.tex:5 coops/emerald_island.tex:5
-#: coops/close_to_enemies.tex:5 coops/stand_united.tex:5 clash/bloody_grail.tex:5 clash/force_of_will.tex:5
-#: clash/the_hunt.tex:5 clash/dragoncurse_castle.tex:5 clash/the_fractured_kingdoms.tex:5
-#: clash/trial_by_combat.tex:5 campaigns/inferno_devilish_plan.tex:6 campaigns/inferno_devilish_plan.tex:202
-#: campaigns/inferno_steadwicks_fall.tex:5 campaigns/inferno_deal_with_the_devil.tex:5
-#: campaigns/castle_greek_gift.tex:6 campaigns/castle_greek_gift.tex:85 campaigns/castle_greek_gift.tex:138
-#: campaigns/castle_sicilian_dragon.tex:5 campaigns/castle_sicilian_dragon.tex:144
-#: campaigns/castle_two_knights_defense.tex:5 campaigns/castle_two_knights_defense.tex:91
-#: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10 sections/random_scenario.tex:5
-#: sections/random_scenario.tex:275 sections/recommendations.tex:71 sections/recommendations.tex:126
+#: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
+#: coops/emerald_island.tex:5 coops/close_to_enemies.tex:5
+#: coops/stand_united.tex:5 clash/bloody_grail.tex:5 clash/force_of_will.tex:5
+#: clash/the_hunt.tex:5 clash/dragoncurse_castle.tex:5
+#: clash/the_fractured_kingdoms.tex:5 clash/trial_by_combat.tex:5
+#: campaigns/inferno_devilish_plan.tex:6
+#: campaigns/inferno_devilish_plan.tex:202
+#: campaigns/inferno_steadwicks_fall.tex:5
+#: campaigns/inferno_deal_with_the_devil.tex:5
+#: campaigns/castle_greek_gift.tex:6 campaigns/castle_greek_gift.tex:85
+#: campaigns/castle_greek_gift.tex:138 campaigns/castle_sicilian_dragon.tex:5
+#: campaigns/castle_sicilian_dragon.tex:144
+#: campaigns/castle_two_knights_defense.tex:5
+#: campaigns/castle_two_knights_defense.tex:91
+#: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:275
+#: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
 msgid ""
@@ -48,8 +55,9 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:44 campaigns/inferno_devilish_plan.tex:90 campaigns/castle_greek_gift.tex:49
-#: campaigns/castle_sicilian_dragon.tex:50 campaigns/castle_two_knights_defense.tex:47
+#: coops/sentinels.tex:44 campaigns/inferno_devilish_plan.tex:90
+#: campaigns/castle_greek_gift.tex:49 campaigns/castle_sicilian_dragon.tex:50
+#: campaigns/castle_two_knights_defense.tex:47
 #, no-wrap
 msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
@@ -59,9 +67,11 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:52 coops/titans_stronghold.tex:59 coops/emerald_island.tex:45
-#: coops/close_to_enemies.tex:68 coops/stand_united.tex:52 campaigns/inferno_devilish_plan.tex:121
-#: campaigns/inferno_steadwicks_fall.tex:133 campaigns/inferno_deal_with_the_devil.tex:83
+#: coops/sentinels.tex:52 coops/titans_stronghold.tex:59
+#: coops/emerald_island.tex:45 coops/close_to_enemies.tex:68
+#: coops/stand_united.tex:52 campaigns/inferno_devilish_plan.tex:121
+#: campaigns/inferno_steadwicks_fall.tex:133
+#: campaigns/inferno_deal_with_the_devil.tex:83
 #: campaigns/castle_greek_gift.tex:72 campaigns/castle_sicilian_dragon.tex:81
 #: campaigns/castle_two_knights_defense.tex:77
 #, no-wrap
@@ -73,24 +83,67 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:62 coops/titans_stronghold.tex:71 coops/emerald_island.tex:53
-#: clash/force_of_will.tex:62 clash/the_hunt.tex:61 clash/dragoncurse_castle.tex:59
-#: clash/the_fractured_kingdoms.tex:41 campaigns/inferno_devilish_plan.tex:140
-#: campaigns/inferno_steadwicks_fall.tex:146 campaigns/inferno_deal_with_the_devil.tex:97
+#: coops/sentinels.tex:62 coops/titans_stronghold.tex:71
+#: coops/emerald_island.tex:53 clash/force_of_will.tex:62 clash/the_hunt.tex:61
+#: clash/dragoncurse_castle.tex:59 clash/the_fractured_kingdoms.tex:41
+#: campaigns/inferno_devilish_plan.tex:140
+#: campaigns/inferno_steadwicks_fall.tex:146
+#: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
 #: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:277
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Évènements Programmés}}\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:142 coops/stand_united.tex:87 clash/dragoncurse_castle.tex:85
-#: campaigns/inferno_devilish_plan.tex:224 campaigns/castle_greek_gift.tex:120
-#: campaigns/castle_greek_gift.tex:271 sections/credits.tex:28 sections/random_scenario.tex:296
+#: coops/sentinels.tex:142 coops/stand_united.tex:87
+#: clash/dragoncurse_castle.tex:85 campaigns/inferno_devilish_plan.tex:224
+#: campaigns/castle_greek_gift.tex:120 campaigns/castle_greek_gift.tex:271
+#: sections/credits.tex:28 sections/random_scenario.tex:296
 #, no-wrap
 msgid ""
 "\\columnbreak\n"
@@ -100,8 +153,9 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/stand_united.tex:23 clash/bloody_grail.tex:21 clash/the_fractured_kingdoms.tex:19
-#: campaigns/inferno_devilish_plan.tex:32 campaigns/inferno_deal_with_the_devil.tex:32
+#: coops/stand_united.tex:23 clash/bloody_grail.tex:21
+#: clash/the_fractured_kingdoms.tex:19 campaigns/inferno_devilish_plan.tex:32
+#: campaigns/inferno_deal_with_the_devil.tex:32
 #: campaigns/castle_greek_gift.tex:28 campaigns/castle_sicilian_dragon.tex:26
 #: campaigns/castle_two_knights_defense.tex:25
 #, no-wrap
@@ -116,13 +170,13 @@ msgstr ""
 #. type: Plain text
 #: campaigns/castle_greek_gift.tex:4
 msgid ""
-"\\phantomsection\\addcontentsline{toc}{section}{\\protect\\numberline{} {} {} {} {}The Queen's Gambit} "
-"\\addscenariosection[subsection]{1}{Castle Campaign $-$ The Queen's Gambit}{1. Greek Gift}{\\images/"
-"catherine.png}"
+"\\phantomsection\\addcontentsline{toc}{section}{\\protect\\numberline{} {} "
+"{} {} {}The Queen's Gambit} \\addscenariosection[subsection]{1}{Castle "
+"Campaign $-$ The Queen's Gambit}{1. Greek Gift}{\\images/catherine.png}"
 msgstr ""
-"\\phantomsection\\addcontentsline{toc}{section}{\\protect\\numberline{} {} {} {} {}The Queen's Gambit} "
-"\\addscenariosection[subsection]{1}{Campagne Château $-$ Gambit de la Reine}{1. Cadeau Grec}{\\images/"
-"catherine.png}"
+"\\phantomsection\\addcontentsline{toc}{section}{\\protect\\numberline{} {} "
+"{} {} {}The Queen's Gambit} \\addscenariosection[subsection]{1}{Campagne "
+"Château $-$ Gambit de la Reine}{1. Cadeau Grec}{\\images/catherine.png}"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:8 campaigns/castle_sicilian_dragon.tex:7
@@ -172,7 +226,8 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: campaigns/castle_greek_gift.tex:18 campaigns/castle_two_knights_defense.tex:15
+#: campaigns/castle_greek_gift.tex:18
+#: campaigns/castle_two_knights_defense.tex:15
 #, no-wrap
 msgid ""
 "This Scenario plays out over 8 Rounds.\n"
@@ -392,7 +447,8 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: campaigns/castle_greek_gift.tex:81 campaigns/castle_two_knights_defense.tex:89
+#: campaigns/castle_greek_gift.tex:81
+#: campaigns/castle_two_knights_defense.tex:89
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
