--- a/translations/castle_greek_gift.tex/fr.po
+++ b/translations/castle_greek_gift.tex/fr.po
@@ -84,7 +84,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Évènements Programmés}}\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
 "\n"
 
 #. type: multicols
