--- a/draft-scenarios/clash/dragnarok.tex
+++ b/draft-scenarios/clash/dragnarok.tex
@@ -51,7 +51,7 @@ If no Victory Condition has been met by the end of Round 12, all players lose.
 \subsection*{\MakeUppercase{Victory Points}}
 The player with the most Victory Points (VP) wins.
 \begin{itemize}
-  \item 4 VP for Flagging a Dragon Utopia
+  \item 4 VP for defeating a Dragon Utopia
   \item 3 VP for each enemy Main Town captured \textit{once per enemy}
   \item 2 VP for each enemy Main Hero defeated
 \end{itemize}
@@ -81,7 +81,6 @@ In case of a tie, the tied players draw Cards to their \svg{hand} Limit and enga
   \item Players may use their M\&M Deck while paying to defend their Town.
   \item If a Hero stands on a removed Tile, move them to the nearest revealed Field and reduce their lowest \svg{initiative} Unit's \svg{health_points} to 0.
     That player suffers -1 \svg{movement} this Round.
-  \item Level VII Neutral Combats cannot be skipped.
   \item \textbf{Obelisk:} Roll 1 \svg{resource} or \svg{treasure}.
   \item \textbf{Dragon Utopia:} Draw Cards up to \svg{hand} Limit, gain 10 \svg{gold}, 1 \svg{valuables} and Search (2) \svg{artifact} twice.
   \item When Tiles are removed, reduce any income provided by mines or settlements on that Tile.
