--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -27,7 +27,7 @@ Out of the mist, enemy armies struck with deadly precision. Someone had betrayed
 
 \textbf{Town Buildings:} City Hall
 
-\textbf{Map Tile Pool:} Each player takes 2 random Far (II-III) Map Tiles and 2 random Near (IV-V) Map Tiles.
+\textbf{Map Tile Pool:} Every player takes 2 random Far (II-III) Map Tiles and 2 random Near (IV-V) Map Tiles.
 
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles ($P$ stands for the number of players) and arrange them as shown in the Scenario map layout:
@@ -38,7 +38,7 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-Each player must win the Level VII Neutral Combat.
+Every player must defeat the Level VII Neutral Combat.
 
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{2} Round:}
@@ -76,7 +76,7 @@ End of \textbf{\nth{13} Round:}
   \begin{tabularx}{0.93\linewidth}{p{0.28\linewidth}X}
     \darkcell[1.6]{Difficulty} & \darkcell[1.6]{Changes to Timed Event Fights} \\
     \darkcell[1.6]{Easy}
-    & \lightcell[1.6]{Remove a Unit from each fight.} \\
+    & \lightcell[1.6]{Remove a Unit from every Timed Event Fights.} \\
     \darkcell[1.6]{Normal}
     & \lightcell[1.6]{No Change} \\
     \darkcell[2.2]{Hard}
