--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -45,9 +45,9 @@ Every player must defeat the Level VII Neutral Combat.
 \begin{itemize}
   \item Build either Camp \svg{building_special_tent} or Workshop \svg{building_special_gears} for free. %(\svg{bulding_special_gears})
 \end{itemize}
-End of \textbf{\nth{4} Round:}
+\textbf{End of \nth{4} Round:}
 \begin{itemize}
-  \item \textbf{one player} must fight a \textbf{Timed Event Fight} of 5 × \svg{bronze}.
+  \item \textbf{One player} must fight a Timed Event Fight of 5~×~\svg{bronze}.
 \end{itemize}
 End of \textbf{\nth{7} Round:}
 \begin{itemize}
