fully resolve commit.

--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -51,19 +51,19 @@ Every player must defeat the Level VII Neutral Combat.
 \end{itemize}
 End of \textbf{\nth{7} Round:}
 \begin{itemize}
-  \item \textbf{one player} must fight a \textbf{Timed Event Fight} of 4 × \svg{silver}
+  \item \textbf{one player} must fight a Timed Event Fight of 4~×~\svg{silver}
 \end{itemize}
 End of \textbf{\nth{9} Round:}
 \begin{itemize}
-  \item \textbf{one player} must fight a \textbf{Timed Event Fight} of 3 × \svg{golden}.
+  \item \textbf{one player} must fight a Timed Event Fight of 3~×~\svg{golden}.
 \end{itemize}
 End of \textbf{\nth{11} Round:}
 \begin{itemize}
-  \item \textbf{one player} must fight a \textbf{Timed Event Fight} of 2 × \svg{azure}.
+  \item \textbf{one player} must fight a Timed Event Fight of 2~×~\svg{azure}.
 \end{itemize}
 End of \textbf{\nth{13} Round:}
 \begin{itemize}
-  \item \textbf{one player} must fight a \textbf{Timed Event Fight} of 3 × \svg{azure}.
+  \item \textbf{one player} must fight a Timed Event Fight of 3~×~\svg{azure}.
 \end{itemize}
 \clearpage
 
