--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -15,14 +15,14 @@ Out of the mist, enemy armies struck with deadly precision. Someone had betrayed
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2-6
 
-\textbf{Starting Resources:} 2 \svg{gold}, 3 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Resources:} 2 \svg{gold}, 3 \svg{building_materials}, 1 \svg{valuables}, 1 x \svg{morale_positive}
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × Search (2) the \svg{bronze} Neutral Deck and 1 x \svg{morale_positive}
+  \item 2 × Search (2) the \svg{bronze} Neutral Deck.
 \end{itemize}
 
 \textbf{Town Buildings:} City Hall
@@ -51,7 +51,7 @@ Every player must defeat the Level VII Neutral Combat.
 \end{itemize}
 End of \textbf{\nth{7} Round:}
 \begin{itemize}
-  \item \textbf{one player} must fight a Timed Event Fight of 4~×~\svg{silver}
+  \item \textbf{one player} must fight a Timed Event Fight of 4~×~\svg{silver}.
 \end{itemize}
 End of \textbf{\nth{9} Round:}
 \begin{itemize}
