--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -15,7 +15,9 @@ Out of the mist, enemy armies struck with deadly precision. Someone had betrayed
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2-6
 
-\textbf{Starting Resources:} 2 \svg{gold}, 3 \svg{building_materials}, 1 \svg{valuables}, 1 x \svg{morale_positive}
+\textbf{Starting Resources:} 2 \svg{gold}, 3 \svg{building_materials}, 1 \svg{valuables}
+
+\textbf{Additional Resources:} 1 x \svg{morale_positive}
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
@@ -38,7 +40,7 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-Every player must defeat the Level VII Neutral Combat.
+Every player must defeat the Level VII Army.
 
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{2} Round:}
@@ -82,7 +84,7 @@ End of \textbf{\nth{13} Round:}
   \item Collaboratively pay $P$~×~5~\svg{gold}, $P$~×~3~\svg{building_materials} and $P$~×~\svg{valuables} to reveal the Center Map Tile ($P$ stands for the number of players), e.g., 4 players must pay 20~\svg{gold}, 12~\svg{building_materials}, and 4~\svg{valuables}.
   \item At the end of every Astrologers Round, players must decide which player gets a free \svg{morale_positive} Token.
   \item Players may exchange Artifacts and Spells from their hands, as well as Units and Resources, if their Main Heroes are standing on adjacent Fields or if both Heroes are in their own Towns.
-  \item Once a player defeats the Level VII Center Tile Field, their Heroes are removed from the Map.
+  \item Once a player defeats the Level VII Army, their Heroes are removed from the Map.
     They are no longer eligible to fight Timed Event Fights.
 \end{itemize}
 \hommtablemulticol[]{22}{
