update for layout

--- a/translations/castle_sicilian_dragon.tex/fr.po
+++ b/translations/castle_sicilian_dragon.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-11-06 23:19+0100\n"
-"PO-Revision-Date: 2025-11-14 15:53+0100\n"
+"PO-Revision-Date: 2025-11-14 16:07+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -632,9 +632,9 @@ msgid ""
 "With the enemy stronghold still nowhere in sight, locating it would take time, and the inhospitable landscape would not be kind.\n"
 "\n"
 msgstr ""
-"Catherine croisa les bras et s'appuya sur le pommeau de sa selle en scrutant les Terres Désolées où ils avaient été conduits.\n"
-"Les Archanges avaient devancé le petit groupe qu'elle avait rassemblé tant bien que mal, et elle se demanda si elle avait eu tort de les laisser partir.\n"
-"La forteresse ennemie étant toujours introuvable, la localiser prendrait du temps, et le paysage hostile ne leur faciliterait pas la tâche.\n"
+"Catherine croisa les bras et s'appuya sur sa selle en scrutant les Terres Désolées où ils avaient été conduits.\n"
+"Les Archanges avaient devancé le petit groupe qu'elle avait assemblé tant bien que mal, et elle se demanda si elle avait eu tort de les laisser partir.\n"
+"Le fort ennemi étant toujours introuvable, le localiser prendrait du temps, et le paysage hostile ne leur faciliterait pas la tâche.\n"
 
 #. type: multicols*
 #: campaigns/castle_sicilian_dragon.tex:157
@@ -647,9 +647,9 @@ msgid ""
 "\n"
 msgstr ""
 "Rion s'arrêta à côté d'elle après avoir fini le contenu de sa gourde.\n"
-"Il s'essuya le visage de sueur et de bave avant de dire un mot.\n"
+"Il s'essuya le visage de sueur et de bave avant de parler.\n"
 "«Ce n'est pas l'endroit idéal pour se battre.\n"
-"Outre les mauvaises conditions, j'ai entendu dire que les locaux sont réputés pour leur… férocité particulière.»\n"
+"Outre les mauvaises conditions, j'ai entendu que les locaux sont réputés pour leur… férocité particulière.»\n"
 "\n"
 
 #. type: multicols*
@@ -661,7 +661,7 @@ msgid ""
 "\n"
 msgstr ""
 "«Eh bien, il va falloir les remettre à leur place.», répondit froidement Catherine.\n"
-"En vérité, cette éventualité l'inquiétait bien plus qu'elle ne le laissait paraître, mais elle se devait de garder son sang-froid pour préserver l'image de sa force.\n"
+"En vérité, cette éventualité l'inquiétait bien plus qu'elle ne le laissait paraître, mais elle devait garder son sang-froid pour préserver l'image de sa force.\n"
 "\n"
 
 #. type: multicols*
@@ -670,7 +670,7 @@ msgstr ""
 msgid ""
 "``You think they'll fight for us?'' Rion asked with a raised eyebrow.\n"
 "\n"
-msgstr "« Tu crois qu'ils se battraient pour nous ?» demanda Rion en haussant un sourcil.\n"
+msgstr "« Se battront-il pour nous ?» demanda Rion en haussant un sourcil.\n"
 
 #. type: multicols*
 #: campaigns/castle_sicilian_dragon.tex:166
@@ -681,7 +681,7 @@ msgid ""
 "For the rest, the sword will do.''\n"
 "\n"
 msgstr ""
-"Catherine serra fermement un lourd sac de pièces d'or qu'elle portait à ses côtés et le jeta sur ses genoux, le contenu tintant comme des clochettes pour appuyer ses propos.\n"
+"Catherine serra fermement un lourd sac de pièces qu'elle portait à ses côtés et le jeta sur ses genoux, en tintant comme des clochettes pour appuyer ses propos.\n"
 "«Je pense qu'on peut s'arranger généreusement.\n"
 "Pour le reste, l'épée fera l'affaire.»\n"
 "\n"
