--- a/translations/castle_sicilian_dragon.tex/fr.po
+++ b/translations/castle_sicilian_dragon.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-11-06 23:19+0100\n"
-"PO-Revision-Date: 2025-11-14 16:07+0100\n"
+"PO-Revision-Date: 2025-11-14 16:15+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -705,7 +705,7 @@ msgid ""
 "Throwing an arm forward, she signaled Rion to proceed with an inspection.\n"
 "\n"
 msgstr ""
-"Plus loin, une clairière de terre craquelée laissait place à un grand Obélisque émergeant du sol tel un repère massif.\n"
+"Plus loin, une clairière de terre craquelée menait à un grand Obélisque émergeant du sol tel un repère massif.\n"
 "Catherine avait vu suffisamment d'artefacts magiques au cours de sa vie pour savoir que la structure était un lieu de pouvoir.\n"
 "D'un geste de la main, elle signala à Rion de procéder à l'inspection.\n"
 "\n"
@@ -719,9 +719,9 @@ msgid ""
 "As awe-inspiring as it was, equally apparent was the time-worn damage.\n"
 "\n"
 msgstr ""
-"Le mage s'approcha lentement, ôtant un gant pour effleurer de sa main la pierre froide aux parois lisses.\n"
+"Le mage s'approcha lentement, pour effleurer de sa main nue la pierre froide aux parois lisses.\n"
 "Des runes complexes y étaient gravées, des écritures de langues oubliées.\n"
-"Aussi impressionnant que cela fut, l'usure du temps était tout aussi apparente.\n"
+"Aussi impressionnant que cela fut, l'usure était tout aussi apparente.\n"
 "\n"
 
 #. type: multicols*
@@ -739,7 +739,7 @@ msgstr ""
 "«C'est une balise de transport», dit-il.\n"
 "«Comme un monolithe, mais à plus courte portée.\n"
 "Du moins… c'en était une.\n"
-"Elle est endommagée, et là où les runes magiques devraient être puissantes, voire luisantes, elles sont sombres, et toute énergie s'est dissipée depuis longtemps.»\n"
+"Elle est endommagée, et là où les runes magiques devraient être puissantes, voire luisantes, elles sont sombres, et toute énergie s'est dissipée.»\n"
 "\n"
 
 #. type: multicols*
@@ -752,8 +752,8 @@ msgid ""
 "\n"
 msgstr ""
 "Catherine descendit de cheval et inspecta lentement les lieux avant de parler.\n"
-"«Certains des dégâts sont récents.\n"
-"Je ressens encore une chaleur résiduelle; les archanges étaient ici.»\n"
+"«Certains dégâts sont récents.\n"
+"Je ressens encore une chaleur résiduelle; les Archanges étaient ici.»\n"
 "\n"
 
 #. type: multicols*
@@ -763,7 +763,7 @@ msgid ""
 "``How can you be sure? Surely, some would have found us by now and notified us of their progress.''\n"
 "\n"
 msgstr ""
-"«Comment pouvez-vous en être sûr? Sûrement que certains nous auraient déjà trouvés et nous auraient informés de leurs progrès.»\n"
+"«Comment pouvez-vous en être sûr? Certains nous auraient déjà trouvés et nous auraient informés de leurs progrès.»\n"
 "\n"
 
 #. type: multicols*
@@ -795,7 +795,7 @@ msgid ""
 "Sounds of battle perked the ears of Catherine's forces, and she urged her steed forward to catch sight of the combatants.\n"
 "\n"
 msgstr ""
-"Des bruits de bataille parvinrent aux oreilles des troupes de Catherine, et elle pressa son destrier pour apercevoir les combattants.\n"
+"Des bruits de bataille parvinrent aux oreilles des troupes de Catherine, et elle pressa son destrier pour voir les combattants.\n"
 "\n"
 
 #. type: multicols*
