--- a/translations/castle_sicilian_dragon.tex/fr.po
+++ b/translations/castle_sicilian_dragon.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-11-06 23:19+0100\n"
-"PO-Revision-Date: 2025-11-14 16:15+0100\n"
+"PO-Revision-Date: 2025-11-14 16:22+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -863,7 +863,7 @@ msgid ""
 "\n"
 msgstr ""
 "Catherine sourit, en serrant le bras de l'ange pour le remercier de son travail.\n"
-"Elle jeta un dernier regard à la troupe hétéroclite qu'elle avait rassemblée espérant qu'elle serait suffisante pour un siège.\n"
+"Elle jeta un dernier regard à la troupe disparate qu'elle avait rassemblée, l'espérant suffisante pour un siège.\n"
 "\n"
 
 #. type: multicols*
@@ -902,7 +902,7 @@ msgid ""
 "It was an eye for an eye, and she relished driving the final blow into the last enemy ranks still in the courtyard herself.\n"
 "\n"
 msgstr ""
-"Avec ces épais murs macabres, presque démoniaques, mais brisés et la majeure partie des forces du nécromancien anéantie, le château appartenait à Catherine.\n"
+"Avec ces épais murs macabres, démoniaques, mais brisés et la majeure partie des forces du nécromancien anéantie, le château était à Catherine.\n"
 "Œil pour œil, dent pour dent, elle savourait le plaisir d'asséner elle-même le coup de grâce aux derniers ennemis encore dans la cour.\n"
 "\n"
 
@@ -945,7 +945,7 @@ msgid ""
 "``It's done,'' Rion said through panting breaths.\n"
 "\n"
 msgstr ""
-"«C'est fait», dit Rion entre deux respirations haletantes.\n"
+"«C'est fait», dit Rion entre deux inspirations.\n"
 "\n"
 
 #. type: multicols*
@@ -982,7 +982,7 @@ msgid ""
 "\n"
 msgstr ""
 "«Il y a toujours de l'espoir, mon ami.\n"
-"Nous utiliserons ce château comme base de ravitaillement puis les poursuivre avant le démon ne rassemble ses forces.\n"
+"Nous utiliserons ce château comme base de ravitaillement et les poursuivrons avant que le démon n'assemble ses forces.\n"
 "Steadwick ne sera jamais en sécurité sinon!»\n"
 "\n"
 
@@ -995,7 +995,7 @@ msgid ""
 "\n"
 msgstr ""
 "«C'est insensé», soupira Rion.\n"
-"«Nous n'avons pas besoin de nous battre avec autant d'acharnement ; Vhidhax n'est pas ton père, Catherine…»\n"
+"«Nous n'avons pas à nous battre autant; Vhidhax n'est pas ton père, Catherine…»\n"
 "\n"
 
 #. type: multicols*
