update layout again

--- a/translations/castle_sicilian_dragon.tex/fr.po
+++ b/translations/castle_sicilian_dragon.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-11-06 23:19+0100\n"
-"PO-Revision-Date: 2025-11-14 16:22+0100\n"
+"PO-Revision-Date: 2025-11-14 16:24+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -982,7 +982,7 @@ msgid ""
 "\n"
 msgstr ""
 "«Il y a toujours de l'espoir, mon ami.\n"
-"Nous utiliserons ce château comme base de ravitaillement et les poursuivrons avant que le démon n'assemble ses forces.\n"
+"Nous utiliserons ce château pour le ravitaillement et les poursuivrons avant que le démon n'assemble ses forces.\n"
 "Steadwick ne sera jamais en sécurité sinon!»\n"
 "\n"
 
