--- a/translations/castle_sicilian_dragon.tex/fr.po
+++ b/translations/castle_sicilian_dragon.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-11-06 23:19+0100\n"
-"PO-Revision-Date: 2025-11-14 16:24+0100\n"
+"PO-Revision-Date: 2025-11-14 16:26+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -916,8 +916,8 @@ msgid ""
 "Catherine's campaign wasn't finished yet.\n"
 "\n"
 msgstr ""
-"Malheureusement, après des recherches frénétiques, Vhidhax restait introuvable.\n"
-"Catherine courût aux remparts juste à temps pour apercevoir le nécromancien s'enfuir avec une importante suite qui s'était discrètement éclipsée pendant la bataille.\n"
+"Malheureusement, après de longues recherches, Vhidhax restait introuvable.\n"
+"Catherine courût aux remparts juste à temps pour apercevoir le nécromancien s'enfuir avec une grande suite qui s'était discrètement éclipsée pendant la bataille.\n"
 "Il se dirigeait vers le nord, s'enfonçant toujours plus profondément dans les terres désolées et s'éloignant de chez elle.\n"
 "La campagne de Catherine n'était pas encore terminée.\n"
 "\n"
