again and again

--- a/translations/castle_sicilian_dragon.tex/fr.po
+++ b/translations/castle_sicilian_dragon.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-11-06 23:19+0100\n"
-"PO-Revision-Date: 2025-11-14 16:26+0100\n"
+"PO-Revision-Date: 2025-11-14 16:31+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -817,7 +817,7 @@ msgid ""
 "Approaching at speed, Catherine raised a fist in the air to salute the holy warriors, and several rasped their bronze chestplates in return.\n"
 "\n"
 msgstr ""
-"Approchant à vive allure, Catherine leva son poing vers le ciel pour saluer ces guerriers saints, et en retour plusieurs frappèrent leurs armures de bronze.\n"
+"Approchant à vive allure, Catherine leva son poing pour saluer ces guerriers saints, et en retour plusieurs frappèrent leurs armures de bronze.\n"
 "\n"
 
 #. type: multicols*
@@ -902,7 +902,7 @@ msgid ""
 "It was an eye for an eye, and she relished driving the final blow into the last enemy ranks still in the courtyard herself.\n"
 "\n"
 msgstr ""
-"Avec ces épais murs macabres, démoniaques, mais brisés et la majeure partie des forces du nécromancien anéantie, le château était à Catherine.\n"
+"Les épais murs macabres, démoniaques, mais brisés et la majeure partie des forces du nécromancien anéantie, le château était à Catherine.\n"
 "Œil pour œil, dent pour dent, elle savourait le plaisir d'asséner elle-même le coup de grâce aux derniers ennemis encore dans la cour.\n"
 "\n"
 
@@ -982,7 +982,7 @@ msgid ""
 "\n"
 msgstr ""
 "«Il y a toujours de l'espoir, mon ami.\n"
-"Nous utiliserons ce château pour le ravitaillement et les poursuivrons avant que le démon n'assemble ses forces.\n"
+"Nous utiliserons ce château pour le ravitaillement et les chasserons avant que le démon n'assemble ses forces.\n"
 "Steadwick ne sera jamais en sécurité sinon!»\n"
 "\n"
 
