--- a/translations/castle_sicilian_dragon.tex/fr.po
+++ b/translations/castle_sicilian_dragon.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-11-06 23:19+0100\n"
-"PO-Revision-Date: 2025-11-14 16:31+0100\n"
+"PO-Revision-Date: 2025-11-14 16:33+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -817,7 +817,7 @@ msgid ""
 "Approaching at speed, Catherine raised a fist in the air to salute the holy warriors, and several rasped their bronze chestplates in return.\n"
 "\n"
 msgstr ""
-"Approchant à vive allure, Catherine leva son poing pour saluer ces guerriers saints, et en retour plusieurs frappèrent leurs armures de bronze.\n"
+"Approchant à vive allure, Catherine leva son poing pour saluer ces guerriers saints, et en retour ils frappèrent leurs armures de bronze.\n"
 "\n"
 
 #. type: multicols*
