--- a/translations/castle_sicilian_dragon.tex/fr.po
+++ b/translations/castle_sicilian_dragon.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-11-06 23:19+0100\n"
-"PO-Revision-Date: 2025-11-14 16:33+0100\n"
+"PO-Revision-Date: 2025-11-14 16:37+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -705,8 +705,8 @@ msgid ""
 "Throwing an arm forward, she signaled Rion to proceed with an inspection.\n"
 "\n"
 msgstr ""
-"Plus loin, une clairière de terre craquelée menait à un grand Obélisque émergeant du sol tel un repère massif.\n"
-"Catherine avait vu suffisamment d'artefacts magiques au cours de sa vie pour savoir que la structure était un lieu de pouvoir.\n"
+"Au loin, une clairière de terre craquelée menait à un grand Obélisque émergeant du sol tel un repère massif.\n"
+"Catherine avait vu nombre d'artefacts magiques dans sa vie pour voir que la structure était un lieu de pouvoir.\n"
 "D'un geste de la main, elle signala à Rion de procéder à l'inspection.\n"
 "\n"
 
@@ -983,7 +983,7 @@ msgid ""
 msgstr ""
 "«Il y a toujours de l'espoir, mon ami.\n"
 "Nous utiliserons ce château pour le ravitaillement et les chasserons avant que le démon n'assemble ses forces.\n"
-"Steadwick ne sera jamais en sécurité sinon!»\n"
+"Steadwick ne sera pas en sécurité sinon!»\n"
 "\n"
 
 #. type: multicols*
