--- a/translations/feedback_page.tex/fr.po
+++ b/translations/feedback_page.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-10-06 09:47+0000\n"
-"PO-Revision-Date: 2025-11-14 16:48+0100\n"
+"PO-Revision-Date: 2025-11-14 16:51+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -54,7 +54,7 @@ msgstr ""
 "  \\bigbreak\n"
 "  \\centering\n"
 "  \\includegraphics[width=0.8\\linewidth]{\\qr/form.png} \\\\\n"
-"  Scanner pour ouvrir \\textbf{formulaire}.\\\\\n"
+"  Scanner pour ouvrir le \\textbf{formulaire}.\\\\\n"
 "  \\href{\\formurl}{https://docs.google.com/forms/...}\n"
 "\n"
 
